# fastapi-crud-admin

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-tag.yml
fastapi_admin/: admin.py  meta.py
fastapi_admin/router/: meta.py  schema.py
fastapi_admin/utils/: database.py  repository.py
fastapi_crud_admin/: admin.py  enum.py  meta.py
fastapi_crud_admin/router/: auth.py  meta.py  schema.py
fastapi_crud_admin/utils/: auth.py  database.py  interceptor.py  pagination.py  repository.py  router.py
test/: main.py
test/example/: config.py  main.py  schema.py
