[tool.poetry]
name = "fastapi-crud-admin"
version = "0.1.0"
description = ""
authors = ["Minsoo <als95.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_admin"}]

[tool.poetry.dependencies]
python = "^3.8"
taskipy = "^1.12.2"
fastapi = "^0.95.1"
sqlalchemy = "^1.4.46"
pytest = "^7.4.4"
aiosqlite = "^0.19.0"
uvicorn = "^0.25.0"
asyncio = "^3.4.3"
greenlet = "^3.0.3"
nest-asyncio = "^1.5.8"

[tool.taskipy.tasks]
test = "uvicorn test.main:app --reload"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
