[tool.poetry]
name = "fastapi-crud-admin"
version = "0.0.5"
description = ""
authors = ["pingusoo <als95.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_crud_admin"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.1"
sqlalchemy = "^1.4.46"
aiosqlite = "^0.19.0"
fastapi-pagination = "^0.12.15"

[tool.poetry.dev-dependencies]
taskipy = "^1.12.2"
pytest = "^7.4.4"
uvicorn = "^0.25.0"
asyncio = "^3.4.3"
greenlet = "^3.0.3"
bcrypt = "^4.1.2"
nest-asyncio = "^1.5.8"

[tool.taskipy.tasks]
test = "python3 -m pytest test"
test_app = "uvicorn test.example.main:app --reload"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
